c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_param.c
struct s;

// it's illegal to define a function with a parameter of incomplete type,
// even if the parameter isn't used
int foo(struct s x) { return 0; }
